博客搭建成功

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+title_ch: 关于我
 title: ABOUT ME
 description: "Hi, this is Lin, nice to meet you."
 header-img: "img/about-bg.jpg"
