--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,8 @@
 ---
+title_ch: 标签
 title: TAGS
 layout: default
-description: "人生太短，总想留下点什么"
+description: "苔花如米小，也学牡丹开"
 header-img: "img/tag-bg.jpg"
 ---
 
