--- a/about.html
+++ b/about.html
@@ -4,9 +4,6 @@ title_ch: 关于我
 title: ABOUT ME
 description: "Hi, this is HaoJie Wu, nice to meet you."
 header-img: "img/about-bg.jpg"
-tags:
-    - 生活
-    - 随笔
 ---
 
 <script type="text/javascript">
@@ -102,7 +99,11 @@ tags:
     <h3>Work Process</h3>
 
     <p>★ 一枚爬虫工程师，并对大数据处理与分析充满无限的兴趣，享受数据分析之美。</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;熟练使用Python---</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;18年毕业于软件工程，对大数据充满了无限的热情，实习阶段主要从事传统网站开发，后面接触到了
+    大数据，便喜欢上了大数据这个圈子。<br>&nbsp;&nbsp;&nbsp;&nbsp;关于爬虫方面，熟练使用Python版scrapy框架与Java版webmagic框架对数据进行获取。
+    <br>&nbsp;&nbsp;&nbsp;&nbsp;关于ETL数据清洗，掌握并使用离线Python版自定义框架，Java版kafka-stream流式数据处理。
+    因为从毕业之后一直接触数据性工作，因此对Hadoop生态圈常用组件都有所了解，关于spark，了解Java版本spark简单使用，并掌握Python版本Dpark与Pyspark的使用。
+    <br>&nbsp;&nbsp;&nbsp;&nbsp;关于数据同步，了解并自定义开发及使用过阿里的DataX相信自己会在大数据的生态圈内越走越远，数据之美，值得我去探索。</p>
     <hr>
     <h3>工作经历</h3>
     <!--第三份工作-->
