--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ header-img: "img/about-bg.jpg"
         纵使自己很渺小，但一定会给这个世界增添点点温暖。年轻为自己而奋斗，年老，就让回忆去祭奠一切吧！<br>
         <li>截至：<span id="count_time">
 
-        </span>&nbsp;&nbsp;共计博文：2&nbsp;篇，博客总字数:
+        </span>&nbsp;&nbsp;共计博文：6&nbsp;篇，博客总字数:
         {% assign count = 0 %}
         {% for post in site.posts %}
         {% assign single_count = post.content | strip_html | strip_newlines | size %}
@@ -100,7 +100,7 @@ header-img: "img/about-bg.jpg"
 
     <p>★ 一枚爬虫工程师，并对大数据处理与分析充满无限的兴趣，享受数据分析之美。</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;18年毕业于软件工程，对大数据充满了无限的热情，实习阶段主要从事传统网站开发，后面接触到了
-    大数据，便喜欢上了大数据这个圈子。<br>&nbsp;&nbsp;&nbsp;&nbsp;关于爬虫方面，熟练使用Python版scrapy框架与Java版webmagic框架对数据进行获取。
+    大数据，便喜欢上了大数据这个圈子。<br>&nbsp;&nbsp;&nbsp;&nbsp;关于爬虫方面，掌握并使用webmagic、scrapy、request-html、selenium、puppeteer等爬虫框架。
     <br>&nbsp;&nbsp;&nbsp;&nbsp;关于ETL数据清洗，掌握并使用离线Python版自定义框架，Java版kafka-stream流式数据处理。
     因为从毕业之后一直接触数据性工作，因此对Hadoop生态圈常用组件都有所了解，关于spark，了解Java版本spark简单使用，并掌握Python版本Dpark与Pyspark的使用。
     <br>&nbsp;&nbsp;&nbsp;&nbsp;关于数据同步，了解并自定义开发及使用过阿里的DataX相信自己会在大数据的生态圈内越走越远，数据之美，值得我去探索。</p>
@@ -111,9 +111,18 @@ header-img: "img/about-bg.jpg"
     <p>
         <ul>
             <li class="line_title"><b>国内主流**网站的数据抓取</b></li>
-            <li class="line_text">对若干招聘网站的数据进行获取，因此各大网站类型不同，因此反爬也各有不同，使用redis-scrapy框架实现分布式数据抓取，并结合kafka对数据进行流式处理，最终入MongoDB。<br>开发语言：PYTHON</li>
+            <li class="line_text">使用 scrapy 框架对全国各大招聘网（拉钩，boss，智联等 8 个），房产网（链家，我爱 我家等 7 个）网站全量数据获取并保持数据同步更新，并通过 kafka Stream 对抓取数据 按既定规则进行流式ETL处理，最终数据存储至MongoDB，并对热点数据实时更新至基 于redis的图数据库redisGraph并对外提供API查询接口。 <br>开发技能：：Python scrapy框架，Mysql数据库，kafka Stream流式处理，Linux服务器，redisGraph 图数据库、MongoDB数据库 </li>
 
-            <li class="line_title"></li>
+            <li class="line_title">企查查，天眼查等工商数据，法院公告，开庭公告等信息获取 </li>
+            <li class="line_text">使用 webmagic 框架对企查查、天眼查、启信宝等工商信息进行获取，使用 scrapy， selenium等框架对法院公告等信息进行获取，对全量数据进行获取并保持同步更新并存储 至MySQL，同时基于工商数据，实现企业Logo筛选算法。 <br>开发技能：Python scrapy框架，Mysql数据库，JAVA webmagic框架</br></li>
+			
+			<li class="line_title">大众点评等各类反爬解密并分析</li>
+            <li class="line_text"> 对大众点评网前端加密数据进行破解，成功解密并获取其美食信息，并使用echarts对其 美食信息进行数据分析；对各类微信小程序，手机APP信息使用Fiddler，jadx等工具进 行解密获取其数据接口。<br>个人技能：Fiddler，jadx</br></li>
+			
+			<li class="line_title">基于微信支付宝信息查询接口开发</li>
+            <li class="line_text">对支付宝、微信个人信息查询底层接口进行开发，并使用 adb 实现百台手机集群群控管 理，使用 flask 实现底层通讯接口开发，基于 MQTT 协议进行手机通讯，使用 flask-websocket进行手机查询任务发布调度与结果信息反馈。 <br>个人技能：python flask框架、flask-websocket模块；adb手机集群管理 </br></li>
+			
+			<li class="line_title"></li>
             <li class="line_text"></li>
         </ul>
     </p>
@@ -148,6 +157,7 @@ header-img: "img/about-bg.jpg"
         <img src="https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=1d532bc43a4e251ff6faecaac6efa272/6f061d950a7b02082793b61f68d9f2d3562cc8f2.jpg" class="thanks_img">
         <img src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=65720bf5366d55fbd1cb7e740c4b242f/5fdf8db1cb1349544ac68f4f5d4e9258d0094ac4.jpg" class="thanks_img">
         <img src="/img/in-post/about/creditesae.png" class="thanks_img">
+		<img src="http://creditease.hotjob.cn/wt/CE/web/img!viewWebSiteLogo?brandCode=1&operational=15870ca8f654756bfb42a8a35a8d496f42e4880e7b998533397fd2870a6c9573c032f50b427012b8f93fe43fadfd40b00d6014b8e65528c26eabbdae5d3b8b10c2cf49846e3c533a",  class="thanks_img", style="background-color=blue">
     </div>
 </div>
 
