发布新文章

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@ header-img: "img/about-bg.jpg"
     <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">宜信-北京致诚信用管理有限公司(依然在职)</span></p>
     <p>
         <ul>
-            <li class="line_title"><b>国内主流**网站的数据抓取</b></li>
+            <li class="line_title"><b>全国各大招聘网、房产网数据获取 </b></li>
             <li class="line_text">使用 scrapy 框架对全国各大招聘网（拉钩，boss，智联等 8 个），房产网（链家，我爱 我家等 7 个）网站全量数据获取并保持数据同步更新，并通过 kafka Stream 对抓取数据 按既定规则进行流式ETL处理，最终数据存储至MongoDB，并对热点数据实时更新至基 于redis的图数据库redisGraph并对外提供API查询接口。 <br>开发技能：：Python scrapy框架，Mysql数据库，kafka Stream流式处理，Linux服务器，redisGraph 图数据库、MongoDB数据库 </li>
 
             <li class="line_title">企查查，天眼查等工商数据，法院公告，开庭公告等信息获取 </li>
@@ -122,8 +122,6 @@ header-img: "img/about-bg.jpg"
 			<li class="line_title">基于微信支付宝信息查询接口开发</li>
             <li class="line_text">对支付宝、微信个人信息查询底层接口进行开发，并使用 adb 实现百台手机集群群控管 理，使用 flask 实现底层通讯接口开发，基于 MQTT 协议进行手机通讯，使用 flask-websocket进行手机查询任务发布调度与结果信息反馈。 <br>个人技能：python flask框架、flask-websocket模块；adb手机集群管理 </br></li>
 			
-			<li class="line_title"></li>
-            <li class="line_text"></li>
         </ul>
     </p>
     <hr>
