--- a/about.html
+++ b/about.html
@@ -113,13 +113,13 @@ header-img: "img/about-bg.jpg"
             <li class="line_title"><b>全国各大招聘网、房产网数据获取 </b></li>
             <li class="line_text">使用 scrapy 框架对全国各大招聘网（拉钩，boss，智联等 8 个），房产网（链家，我爱 我家等 7 个）网站全量数据获取并保持数据同步更新，并通过 kafka Stream 对抓取数据 按既定规则进行流式ETL处理，最终数据存储至MongoDB，并对热点数据实时更新至基 于redis的图数据库redisGraph并对外提供API查询接口。 <br>开发技能：：Python scrapy框架，Mysql数据库，kafka Stream流式处理，Linux服务器，redisGraph 图数据库、MongoDB数据库 </li>
 
-            <li class="line_title">企查查，天眼查等工商数据，法院公告，开庭公告等信息获取 </li>
+            <li class="line_title"><b>企查查，天眼查等工商数据，法院公告，开庭公告等信息获取 </b></li>
             <li class="line_text">使用 webmagic 框架对企查查、天眼查、启信宝等工商信息进行获取，使用 scrapy， selenium等框架对法院公告等信息进行获取，对全量数据进行获取并保持同步更新并存储 至MySQL，同时基于工商数据，实现企业Logo筛选算法。 <br>开发技能：Python scrapy框架，Mysql数据库，JAVA webmagic框架</br></li>
 			
-			<li class="line_title">大众点评等各类反爬解密并分析</li>
+			<li class="line_title"><b>大众点评等各类反爬解密并分析</b></li>
             <li class="line_text"> 对大众点评网前端加密数据进行破解，成功解密并获取其美食信息，并使用echarts对其 美食信息进行数据分析；对各类微信小程序，手机APP信息使用Fiddler，jadx等工具进 行解密获取其数据接口。<br>个人技能：Fiddler，jadx</br></li>
 			
-			<li class="line_title">基于微信支付宝信息查询接口开发</li>
+			<li class="line_title"><b>基于微信支付宝信息查询接口开发</b></li>
             <li class="line_text">对支付宝、微信个人信息查询底层接口进行开发，并使用 adb 实现百台手机集群群控管 理，使用 flask 实现底层通讯接口开发，基于 MQTT 协议进行手机通讯，使用 flask-websocket进行手机查询任务发布调度与结果信息反馈。 <br>个人技能：python flask框架、flask-websocket模块；adb手机集群管理 </br></li>
 			
         </ul>
