更新个人技能

--- a/about.html
+++ b/about.html
@@ -122,6 +122,8 @@ header-img: "img/about-bg.jpg"
 			<li class="line_title"><b>基于微信支付宝信息查询接口开发</b></li>
             <li class="line_text">对支付宝、微信个人信息查询底层接口进行开发，并使用 adb 实现百台手机集群群控管 理，使用 flask 实现底层通讯接口开发，基于 MQTT 协议进行手机通讯，使用 flask-websocket进行手机查询任务发布调度与结果信息反馈。 <br>个人技能：python flask框架、flask-websocket模块；adb手机集群管理 </br></li>
 			
+			<li class="line_title"><b>基于Tasker对手机短信验证码抓取</b></li>
+            <li class="line_text">在爬虫自动化数据获取中，遇到需要登录的网站，往往需要接收手机验证码，因此，基于tasker实现手机验证码自动化接口开发，实现爬虫自动化信息获取。</li>
         </ul>
     </p>
     <hr>
