增加工作经历

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ header-img: "img/about-bg.jpg"
         纵使自己很渺小，但一定会给这个世界增添点点温暖。年轻为自己而奋斗，年老，就让回忆去祭奠一切吧！<br>
         <li>截至：<span id="count_time">
 
-        </span>&nbsp;&nbsp;共计博文：6&nbsp;篇，博客总字数:
+        </span>&nbsp;&nbsp;共计博文：7&nbsp;篇，博客总字数:
         {% assign count = 0 %}
         {% for post in site.posts %}
         {% assign single_count = post.content | strip_html | strip_newlines | size %}
@@ -100,14 +100,36 @@ header-img: "img/about-bg.jpg"
 
     <p>★ 一枚爬虫工程师，并对大数据处理与分析充满无限的兴趣，享受数据分析之美。</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;18年毕业于软件工程，对大数据充满了无限的热情，实习阶段主要从事传统网站开发，后面接触到了
-    大数据，便喜欢上了大数据这个圈子。<br>&nbsp;&nbsp;&nbsp;&nbsp;关于爬虫方面，掌握并使用webmagic、scrapy、request-html、selenium、puppeteer等爬虫框架。
-    <br>&nbsp;&nbsp;&nbsp;&nbsp;关于ETL数据清洗，掌握并使用离线Python版自定义框架，Java版kafka-stream流式数据处理。
-    因为从毕业之后一直接触数据性工作，因此对Hadoop生态圈常用组件都有所了解，关于spark，了解Java版本spark简单使用，并掌握Python版本Dpark与Pyspark的使用。
+    大数据，便喜欢上了大数据这个圈子。坚持在csdn论坛发布最新研究，累计粉丝108人，发布文章43篇，博客访问量达：170088次。<br>&nbsp;&nbsp;&nbsp;&nbsp;关于爬虫方面，熟练掌握并使用webmagic、scrapy、request-html、selenium、puppeteer等爬虫框架，先后对微信小程序，web端，安卓App等都能抓包分析。
+    <br>&nbsp;&nbsp;&nbsp;&nbsp;关于ETL数据清洗，掌握并使用离线Python版自定义框架，掌握并使用kettle、Datax等数据处理工具，Java版kafka-stream流式数据处理。
+    因为从毕业之后一直接触数据性工作，因此对Hadoop生态圈常用组件都有所了解，关于spark，了解Java版本spark简单使用，并掌握Python版本Dpark与Pyspark的使用。关于BI工具，搭建并使用宜信开源BI报表展示工具：Davinci。
     <br>&nbsp;&nbsp;&nbsp;&nbsp;关于数据同步，了解并自定义开发及使用过阿里的DataX相信自己会在大数据的生态圈内越走越远，数据之美，值得我去探索。</p>
     <hr>
     <h3>工作经历</h3>
+	    <!--第四份工作-->
+    <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">陕西省物流集团-陕西数图行信息科技有限公司（在职）
+        <ul>
+            <li class="line_title"><b>陕西省商机信息采集</b></li>
+            <li class="line_text">使用 scrapy 框架、selenium框架对陕西省内20多个招标类网站信息持续进行采集，并使用flask搭建公司内部商机信息平台，对接钉钉消息推送，让销售部门能第一时间掌握整个陕西省最新商机情况。其中对最核心商机平台进行了破解：<a href="https://blog.csdn.net/sinat_32651363/article/details/109220805" target="_blank">中国采购招标网爬虫采集破解</a>
+			<br>开发技能：：Python scrapy框架，Mysql数据库，selenium，flask框架 </li>
+
+            <li class="line_title"><b>陕西省工会城市困难职工解困脱困数据分析 </b></li>
+            <li class="line_text">对陕西省内11个地市，108个区县的城市困难职工数据进行100多项维度统计分析，产出多项数据报表，并为《陕西省解困脱困报告》提供数据分析结果支撑。
+			<br>开发技能：Mysql数据库，Davinci数据报表</br></li>
+			
+			<li class="line_title"><b>西安市特种设备电梯数据库分析 </b></li>
+            <li class="line_text">对西安市内特种设备监督管理局所管辖西安市电梯数据库进行优化分析，并提供优化建议报告；对于特种设备电梯数据与其他（锅炉、游乐场等共计8项特种设备）数据进行分析处理，并采用kettle工具进行历史数据库与新版本数据库进行迁移。
+			<br>开发技能：Mysql数据库，kettle工具</br></li>
+			
+			<li class="line_title"><b>物通陕西平台数据工作建设 </b></li>
+            <li class="line_text">作为陕西省第一个大宗商品物流平台，提供多方面数据支持，包含统计局、年鉴网、知县网等108个若干数据类网站进行数据采集与清洗，对于合法合规数据进行平台化处理，对陕西大宗商品物流提供强有力数据支持服务。针对持续性数据更新工作，自研一套数据采集系统，持续监控陕西省内多项政府类网站，垂直行业类网站等，做到数据实时更新。
+			<br>开发技能：Mysql数据库，kafka、MongoDB、ocr图片文字识别、Linux服务器、davinci数据驾驶舱</br></li>
+			
+		</ul>
+    </p>
+    <hr>
     <!--第三份工作-->
-    <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">宜信-北京致诚信用管理有限公司(依然在职)</span></p>
+    <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">宜信-北京致诚信用管理有限公司</span></p>
     <p>
         <ul>
             <li class="line_title"><b>全国各大招聘网、房产网数据获取 </b></li>
@@ -139,7 +161,7 @@ header-img: "img/about-bg.jpg"
     </p>
     <!--第一份工作-->
     <hr>
-    <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">北京新华多媒体数据有限公司</span></p>
+    <p> &nbsp;<i class="fa fa-spin fa-star" aria-hidden="true" style="color:#0085A1"></i><span class="title_style">新华社-北京新华多媒体数据有限公司</span></p>
     <p>
         <ul>
             <li class="line_title"><b>主流新闻网站爬虫开发</b></li>
@@ -154,9 +176,10 @@ header-img: "img/about-bg.jpg"
     <h3>Thanks</h3>
     <hr>
     <div>
-        <img src="https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=1d532bc43a4e251ff6faecaac6efa272/6f061d950a7b02082793b61f68d9f2d3562cc8f2.jpg" class="thanks_img">
-        <img src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=65720bf5366d55fbd1cb7e740c4b242f/5fdf8db1cb1349544ac68f4f5d4e9258d0094ac4.jpg" class="thanks_img">
+        <img src="img/in-post/about/news.jpg" class="thanks_img">
+        <img src="img/in-post/about/nutfi.jpg" class="thanks_img">
         <img src="/img/in-post/about/creditesae.png" class="thanks_img">
+        <img src="/img/in-post/about/shutuxing.png" class="thanks_img">
 		<img src="http://creditease.hotjob.cn/wt/CE/web/img!viewWebSiteLogo?brandCode=1&operational=15870ca8f654756bfb42a8a35a8d496f42e4880e7b998533397fd2870a6c9573c032f50b427012b8f93fe43fadfd40b00d6014b8e65528c26eabbdae5d3b8b10c2cf49846e3c533a",  class="thanks_img", style="background-color=blue">
     </div>
 </div>
