增加工作经历

--- a/about.html
+++ b/about.html
@@ -176,8 +176,8 @@ header-img: "img/about-bg.jpg"
     <h3>Thanks</h3>
     <hr>
     <div>
-        <img src="img/in-post/about/news.jpg" class="thanks_img">
-        <img src="img/in-post/about/nutfi.jpg" class="thanks_img">
+        <img src="img/in-post/about/news.png" class="thanks_img">
+        <img src="img/in-post/about/nutfi.png" class="thanks_img">
         <img src="/img/in-post/about/creditesae.png" class="thanks_img">
         <img src="/img/in-post/about/shutuxing.png" class="thanks_img">
 		<img src="http://creditease.hotjob.cn/wt/CE/web/img!viewWebSiteLogo?brandCode=1&operational=15870ca8f654756bfb42a8a35a8d496f42e4880e7b998533397fd2870a6c9573c032f50b427012b8f93fe43fadfd40b00d6014b8e65528c26eabbdae5d3b8b10c2cf49846e3c533a",  class="thanks_img", style="background-color=blue">
